# Reverse-Proxy-Access-Control-Manager

./: .gitignore  BACKEND.md  README.md  Thumbs.db  control_panel.py  dependencies.py  main.py  pyproject.toml  request_access.py
common_custom/: pyproject.toml
common_custom/common_custom/controllers/: database.py  note.txt  (+2 more)
data/: .env.example  contact-fields.json  private.env.example
private-api/: app.py  backend.md
private-api/frontend/: index.html  package-lock.json  package.json  vite.config.ts
private-api/models/: auth_models.py
private-api/routes/: auth.py  config.py  connection.py  pending.py  service.py  services.py  webhook.py
proxy-listener/: .env.example  .gitignore  BACKEND.md  README.md  main.py
proxy-listener/schemas/: nginx_configuration.py
proxy-listener/utilities/: backend.py  nginx.py  polling.py
public-api/: BACKEND.md  app.py  main_test.py
public-api/frontend/: index.html  package-lock.json  package.json  vite.config.ts
services/: services.py
utilities/: backend.py  logger.py  nginx.py
utils/: core_functions.py
webhook-templates/: pending.denied.json  template_options.md
webhook-templates/android-sms-api-webhooks/: README.md  connection.revoked.json  pending.accepted.json  pending.new.json
webhook-templates/discord-webhooks/: README.md  pending.new.json
webhook-templates/resend-webhooks/: README.md  connection.revoked.json  pending.accepted.json  pending.denied.json  pending.new.json
webhook-templates/sendgrid-webhooks/: README.md  connection.revoked.json  pending.accepted.json  pending.denied.json  pending.new.json
(+54 files in other folders)
